# Qercel

./: README.md
core/: pyproject.toml
