[project]
name = "Qercel"
version = "0.1.0"
description = "Local Vercel for Arduino UNO Q"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "zeroconf",
    "psutil",
    "httpx",
    "pydantic-settings",
    "loguru",
    "python-dotenv",
]
